# elec-forecast

./: .env.example  .gitignore  LICENSE  README.md  TODO.md
apps/dashboard/: Dockerfile  app.py  requirements.txt
apps/mlflow/: Dockerfile  entrypoint.sh
contracts/: features.yaml  schemas.md
infra/: setup.ps1
infra/cloudrun/: Dockerfile.jobs  cloudbuild-dashboard-only.yaml  cloudbuild-jobs-only.yaml  cloudbuild.yaml  deploy.ps1
infra/scheduler/: setup.ps1
infra/sql/ddl/: elec_features.sql  elec_ml.sql  elec_raw.sql
infra/terraform/: apis.tf  bigquery.tf  cloudrun.tf  iam.tf  imports.tf  main.tf  outputs.tf  registry.tf  scheduler.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf
infra/terraform/schemas/: eco2mix.json  features.json  metrics.json  predictions.json  weather.json
jobs/: pyproject.toml
jobs/elec_jobs/: __main__.py
jobs/elec_jobs/backfill/: run.py
jobs/elec_jobs/features/: run.py
jobs/elec_jobs/forecast/: run.py
jobs/elec_jobs/ingest/: run.py
jobs/elec_jobs/metrics/: run.py
jobs/elec_jobs/reingest/: run.py
jobs/elec_jobs/score/: run.py
jobs/elec_jobs/shared/: bq.py  config.py  gcs.py  models.py
jobs/elec_jobs/train/: run.py
jobs/tests/: test_features.py  test_ingest.py  test_models.py
notebooks/: modeling.ipynb
scripts/: backfill.py  backfill_walk_forward.py  check_predictions.py  full_pipeline.ps1  truncate_tables.py
